--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <section class="hero is-primary">
+    <section class="hero has-background-dark">
         <div class="hero-body has-text-centered">
-            <h1 class="title">Neodev</h1>
-            <p class="subtitle">Everything you <strong>MUST</strong> know as a devoloper!</p>
+            <h1 class="title has-text-light">Neodev</h1>
+            <p class="subtitle has-text-light">Everything you <strong class="has-text-light">MUST</strong> know as a devoloper!</p>
         </div> <!-- end of hero-body -->
         <div class="hero-foot">
             <nav id="NavBar" class="navbar" role="navigation" aria-label="main navigation">
@@ -21,10 +21,10 @@
                         <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                     </a> -->
                     <a href="/" class="navbar-item">
-                        <strong>Home</strong>
+                        <strong class="has-text-light">Home</strong>
                     </a>
 
-                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                    <a role="button" class="navbar-burger has-text-light" aria-label="menu" aria-expanded="false"
                         v-on:click="showMenu">
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
