--- a/staff.html
+++ b/staff.html
@@ -2,9 +2,7 @@
 layout: pages
 title: Staff
 ---
-<h1 class="title">Staff</h1>
-
-<div class="container content">
+<div class="content">
     <ul>
         {% for author in site.authors %}
         <li>
