--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: pages
 title: About Home
 description: Hello About
-# image-url: /assets/images/book-stock-image.jpg
+image-url: /assets/images/book-stock-image.jpg
 ---
 
 <section class="hero is-text is-medium">
